@@ -1,4 +1,4 @@
-Next version:
+- Remove the "*:" from Call()
 - Add AWS/DSD sound alerter
 - Clean up the C++ code, split into classes
 - More generalization in the C++ code and cleaning it a bit
